RESOLVED FIXED 77055
[chromium] Rollout r100751, this mechanism does not work and is very slow
https://bugs.webkit.org/show_bug.cgi?id=77055
Summary [chromium] Rollout r100751, this mechanism does not work and is very slow
James Robinson
Reported 2012-01-25 15:55:22 PST
[chromium] Rollout r100751, this mechanism does not work and is very slow
Attachments
Patch (9.96 KB, patch)
2012-01-25 15:57 PST, James Robinson
no flags
Patch for landing (9.96 KB, patch)
2012-01-25 15:57 PST, James Robinson
no flags
Patch for landing (9.05 KB, patch)
2012-01-25 18:16 PST, James Robinson
no flags
James Robinson
Comment 1 2012-01-25 15:57:20 PST
James Robinson
Comment 2 2012-01-25 15:57:43 PST
Created attachment 124028 [details] Patch for landing
WebKit Review Bot
Comment 3 2012-01-25 16:47:31 PST
Comment on attachment 124028 [details] Patch for landing Rejecting attachment 124028 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ViewImpl.o CXX(target) out/Debug/obj.target/webkit/Source/WebKit/chromium/src/WebMediaElement.o Source/WebKit/chromium/src/WebLayerTreeView.cpp: In member function 'WebKit::WebLayerTreeView::Settings::operator WebCore::CCSettings() const': Source/WebKit/chromium/src/WebLayerTreeView.cpp:45: error: 'struct WebCore::CCSettings' has no member named 'refreshRate' make: *** [out/Debug/obj.target/webkit/Source/WebKit/chromium/src/WebLayerTreeView.o] Error 1 make: *** Waiting for unfinished jobs.... Full output: http://queues.webkit.org/results/11265083
James Robinson
Comment 4 2012-01-25 18:16:25 PST
Created attachment 124050 [details] Patch for landing
James Robinson
Comment 5 2012-01-25 18:16:34 PST
Trying a less intrusive rollout (the CCSettings code is fine as is, it's just the WebViewImpl bit I'm targetting).
WebKit Review Bot
Comment 6 2012-01-25 19:08:37 PST
Comment on attachment 124050 [details] Patch for landing Clearing flags on attachment: 124050 Committed r105961: <http://trac.webkit.org/changeset/105961>
WebKit Review Bot
Comment 7 2012-01-25 19:08:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.