Source/WebCore/platform/PlatformScreen.h
@@ -51,11 +51,6 @@ namespace WebCore {
     FloatRect screenRect(Widget*);
     FloatRect screenAvailableRect(Widget*);
 
-#if PLATFORM(CHROMIUM)
-    // Measured in frames per second. 0 if the refresh rate is unknown, or not applicable.
-    double screenRefreshRate(Widget*);
-#endif
-
 #if PLATFORM(MAC)
     NSScreen *screenForWindow(NSWindow *);
 
