Source/WebCore/platform/chromium/PlatformScreenChromium.cpp
@@ -71,9 +71,4 @@ FloatRect screenAvailableRect(Widget* widget)
     return PlatformSupport::screenAvailableRect(widget);
 }
 
-double screenRefreshRate(Widget* widget)
-{
-    return PlatformSupport::screenRefreshRate(widget);
-}
-
 } // namespace WebCore
