Source/WebKit/chromium/public/WebScreenInfo.h
@@ -69,16 +69,12 @@ struct WebScreenInfo {
     //   some of the rectangle's coordinates may be negative values".
     WebRect availableRect;
 
-    // Measured in frames per second. 0 if the rate is unknown or not applicable.
-    double refreshRate;
-
     WebScreenInfo()
         : horizontalDPI(0)
         , verticalDPI(0)
         , depth(0)
         , depthPerComponent(0)
-        , isMonochrome(false)
-        , refreshRate(0) { }
+        , isMonochrome(false) { }
 };
 
 } // namespace WebKit
